# histo-patch-cls

./: .gitignore  STRUCTURE.md  pyproject.toml
configs/: default.json  train.json
scripts/: download_dataset.py  run_histoclass_example.ps1
src/histoclass/: __init__.py  config.py  data.py  model.py
src/histoclass/engine/: __init__.py  evaluator.py  trainer.py
src/histoclass/utils/: __init__.py  config.py  logger.py  metrics.py  seed.py
src/histoclass_cli/: __init__.py  main.py  pipeline.py
tests/: test_cli_main.py  test_config.py  test_data_lmdb.py  test_data_split.py  test_evaluator.py  test_logger.py  test_metrics.py  test_pipeline.py  test_torch.py  test_trainer.py
tex/: .gitignore  latexmkrc  main.tex  preamble.tex  references.bib
tex/sections/01_introduction/: section.tex
tex/sections/02_related_work/: section.tex
tex/sections/03_problem_formulation/: section.tex
tex/sections/04_dataset_and_experimental_protocol/: section.tex
tex/sections/05_method/: section.tex
tex/sections/06_experiments/: section.tex
tex/sections/07_discussion/: section.tex
tex/tables/: backbone_baseline_comparison.tex  imbalance_ablation_comparison.tex  split_protocol_comparison.tex
